working on videoplayer src url

--- a/src/templates/videoPlayer.html
+++ b/src/templates/videoPlayer.html
@@ -1,9 +1,9 @@
 <div class="video-player">
   <div class="embed-responsive embed-responsive-16by9">
-    <iframe class="embed-responsive-item" src=`https://www.youtube.com/embed/${$ctrl.current-video.id.videoId}` allowFullScreen></iframe>
+    <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/currentVideo.id.videoId" allowFullScreen></iframe>
   </div>
   <div class="video-player-details">
-    <h3>{{$ctrl.current-video.snippet.title}}</h3>
-    <div>{{$ctrl.current-video.snippet.description}}</div>
+    <h3>{{$ctrl.currentVideo.snippet.title}}</h3>
+    <div>{{$ctrl.currentVideo.snippet.description}}</div>
   </div>
 </div>
