--- a/src/templates/app.html
+++ b/src/templates/app.html
@@ -6,7 +6,7 @@
   </nav>
   <div class="row">
     <div class="col-md-7">
-      <video-player current-video="{{$ctrl.currentVideo}}"></video-player>
+      <video-player current-video="$ctrl.currentVideo"></video-player>
     </div>
     <div class="col-md-5">
       <video-list foo="var"></video-list>
